docs(swagger): add swagger
